--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,20 @@
-/* Larger than phablet */
-@media (min-width: 550px) {}
+html {margin-right: 0px;
+	margin-left: 0px;
+	margin-top: 0px;
+	margin-bottom: 0px;
+	}
+	
+body {margin-top: 0px;
+	margin-bottom: 0px;
+	margin-right:auto;
+	margin-left: auto;
+	background-color:green;}
 
-/* Larger than tablet */
-@media (min-width: 750px) {}
+p 	{border-color: black;
+		border: 1px;
+	}
 
-/* Larger than desktop */
-@media (min-width: 1000px) {}
+	
+		
 
-/* Larger than Desktop HD */
-@media (min-width: 1200px) {}
+	
